# weather-cli-app

./: Cargo.toml
src/: api.rs  args.rs  cmd.rs  main.rs
