[package]
name = "cli-weather-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# clap = { version = "4.1.4", features = ["derive"] }
clap = { version = "2.33.4"}
reqwest = {version = "0.11.14",features = ["json"]}
serde = {version = "1.0.152",features = ["derive"]}
dotenv = "0.15.0"
tokio = {version = "1.25.0",features = ["full"]}
